--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -176,30 +177,34 @@
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Especialización en gerencia de proyectos</h5>
-                            <p class="mb-2"><strong>Fundación universitaria UNINPAHU</strong> | <small>2018 – 2021</small></p>
+                            <p class="mb-2"><strong>Fundación universitaria UNINPAHU</strong> | <small>2018 –
+                                    2021</small></p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Ingeniería de sistemas</h5>
-                            <p class="mb-2"><strong>Fundación Universitaria Los Libertadores</strong> | <small>2013 –2018</small></p>
+                            <p class="mb-2"><strong>Fundación Universitaria Los Libertadores</strong> | <small>2013
+                                    –2018</small></p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Tecnología en análisis y desarrollo de sistemas de información</h5>
+                            <h5 class="font-weight-bold mb-1">Tecnología en análisis y desarrollo de sistemas de
+                                información</h5>
                             <p class="mb-2"><strong>Sena</strong> | <small>2011 – 2013</small></p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                                <h5 class="font-weight-bold mb-1">Tecnología en informática</h5>
-                                <p class="mb-2"><strong>Uniminuto</strong> | <small>2008 – 2011</small></p>
+                            <h5 class="font-weight-bold mb-1">Tecnología en informática</h5>
+                            <p class="mb-2"><strong>Uniminuto</strong> | <small>2008 – 2011</small></p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Técnico laboral en operador de computadores y programas</h5>
+                            <h5 class="font-weight-bold mb-1">Técnico laboral en operador de computadores y programas
+                            </h5>
                             <p class="mb-2"><strong>Instituto británico</strong> | <small>2007 – 2008</small></p>
                         </div>
                     </div>
@@ -223,7 +228,8 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Aplicación del marco de trabajo scrum para proyectos de desarrollo de software</h5>
+                            <h5 class="font-weight-bold mb-1">Aplicación del marco de trabajo scrum para proyectos de
+                                desarrollo de software</h5>
                             <p class="mb-2"><strong>Sena virtual</strong> | <small>2023</small></p>
                         </div>
                         <div class="position-relative mb-4">
@@ -306,7 +312,7 @@
                         <i class="fab fa-2x fa-apple"></i>
                         <h4>Prodigious Latin America</h4>
                         <p>Senior Functional Qa Analyst</p>
-                        <a href="pag/Prodigious.html">Leer más</a>
+                        <a href="pag/prodigious.html">Leer más</a>
                     </div>
                 </div>
 
@@ -316,7 +322,7 @@
                         <i class="fa fa-2x fa-laptop"></i>
                         <h4>Tata Consultancy Services</h4>
                         <p>Senior Tester</p>
-                        <a href="pag/Tata.html">Leer más</a>
+                        <a href="pag/tata.html">Leer más</a>
                     </div>
                 </div>
 
@@ -326,7 +332,7 @@
                         <i class="fa fa-2x fa-laptop-code"></i>
                         <h4>Easy Solutions</h4>
                         <p>Qa Tester</p>
-                        <a href="pag/Easy.html">Leer más</a>
+                        <a href="pag/easy.html">Leer más</a>
                     </div>
                 </div>
             </div>
@@ -560,19 +566,21 @@
                             <div class="form-row">
                                 <div class="control-group col-sm-6">
                                     <input type="text" class="form-control p-4" id="name" placeholder="Nombre completo"
-                                        required="required" data-validation-required-message="Por favor ingrese su nombre" />
+                                        required="required"
+                                        data-validation-required-message="Por favor ingrese su nombre" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group col-sm-6">
-                                    <input type="email" class="form-control p-4" id="email" placeholder="Correo electrónico"
-                                        required="required"
+                                    <input type="email" class="form-control p-4" id="email"
+                                        placeholder="Correo electrónico" required="required"
                                         data-validation-required-message="Por favor ingrese su correo" />
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="control-group">
-                                <input type="text" class="form-control p-4" id="subject" placeholder="Asunto del mensaje"
-                                    required="required" data-validation-required-message="Por favor ingrese su asunto" />
+                                <input type="text" class="form-control p-4" id="subject"
+                                    placeholder="Asunto del mensaje" required="required"
+                                    data-validation-required-message="Por favor ingrese su asunto" />
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="control-group">
@@ -582,7 +590,8 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div>
-                                <button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Enviar Mensaje</button>
+                                <button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Enviar
+                                    Mensaje</button>
                             </div>
                         </form>
                     </div>
@@ -596,27 +605,24 @@
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
-            <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
+            <div class="d-flex justify-content-center mb-2">
+                <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/katalinasilvestre?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/catalinasilvestre/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.instagram.com/kathasgut?igsh=MWhrb2MzaWR2ZHVycg==" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.tiktok.com/@katalinasilvestre?_t=8sItff0791y&_r=1" target="_blank"><i class="fab fa-tiktok"></i></a>
             </div>
             <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#about">Acerca </a>
                 <span class="px-3">|</span>
-                <a class="text-white" href="#">Educación
-                </a>
+                <a class="text-white" href="#qualification">Educación</a>
                 <span class="px-3">|</span>
-                <a class="text-white" href="#">
-                    Experiencia
-                    </a>
+                <a class="text-white" href="#service">Experiencia</a>
                 <span class="px-3">|</span>
-                <a class="text-white" href="#">
-                    Habilidades</a>
+                <a class="text-white" href="#skill">Habilidades</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">2024</a>. Todos los derechos reservados y
-                 diseñado por Catalina Silvestre Gutiérrez</p>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">2024</a>. Todos los derechos
+                reservados y
+                diseñado por Catalina Silvestre Gutiérrez</p>
         </div>
     </div>
     <!-- Footer End -->
