Cambios en el portafolio

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
                         Catalina Silvestre Gutiérrez</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Especialista en garantía de calidad, metodologías ágiles, desarrollo
+                    <div class="typed-text d-none">Especialista en garantía de calidad, Metodologías ágiles, Desarrollo
                         de productos digitales innovadores</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="../doc/CatalinaSilvestre_esp_2.pdf" target="_blank"
@@ -97,8 +97,6 @@
         </div>
     </div>
     <!-- Header End -->
-
-
     <!-- About Start -->
     <div class="container-fluid py-5" id="about">
         <div class="container">
@@ -154,8 +152,6 @@
         </div>
     </div>
     <!-- About End -->
-
-
     <!-- Qualification Start -->
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
@@ -256,8 +252,6 @@
         </div>
     </div>
     <!-- Qualification End -->
-
-
     <!-- Services Start -->
     <div class="container-fluid pt-5" id="service">
         <div class="container">
@@ -339,7 +333,6 @@
         </div>
     </div>
     <!-- Services End -->
-
     <!-- Skill Start -->
     <div class="container-fluid py-5" id="skill">
         <div class="container">
@@ -416,8 +409,6 @@
         </div>
     </div>
     <!-- Skill End -->
-
-
     <!-- Portfolio Start -->
     <div class="container-fluid pt-5 pb-3" id="portfolio">
         <div class="container">
@@ -549,8 +540,6 @@
         </div>
     </div>
     <!-- Blog End -->
-
-
     <!-- Contact Start -->
     <div class="container-fluid py-5" id="contact">
         <div class="container">
@@ -600,8 +589,6 @@
         </div>
     </div>
     <!-- Contact End -->
-
-
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
@@ -626,14 +613,10 @@
         </div>
     </div>
     <!-- Footer End -->
-
     <!-- Scroll to Bottom -->
     <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
-
-
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
@@ -643,13 +626,10 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
-
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
     <script src="mail/contact.js"></script>
-
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
-
 </html>
