--- a/pag/ingenian.html
+++ b/pag/ingenian.html
@@ -49,9 +49,9 @@
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
             <!-- Imagen central -->
-            <div class="text-center mb-4">
-                <img class="img-fluid" src="../img/logos/ingenian.png" alt="Logo Ingenian">
-            </div>
+            <div class="text-center mb-4"><br><br><br>
+                <img class="img-fluid" src="../img/logos/ingenian.png" alt="Logo ingenian">
+            </div><br><br>
             <!-- Contenido de las funciones -->
             <div class="row">
                 <!-- Columna 1 -->
