--- a/pag/sured.html
+++ b/pag/sured.html
@@ -49,7 +49,7 @@
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
             <!-- Imagen central -->
-            <div class="text-center mb-4">
+            <div class="text-center mb-4"><br><br><br>
                 <img class="img-fluid" src="../img/logos/sured.png" alt="Logo sured">
             </div><br><br>
             <!-- Contenido de las funciones -->
