--- a/pag/prodigious.html
+++ b/pag/prodigious.html
@@ -48,7 +48,7 @@
     <!-- Qualification Start -->
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
-            <div class="position-relative d-flex align-items-center justify-content-center"><br><br>
+            <div class="position-relative d-flex align-items-center justify-content-center"><br><br><br>
                 <img class="img-fluid" src="../img/logos/prodigious.png" alt=""><br><br>
             </div> <br>
             <h4 class="mb-2 text-center"><strong>Ago.2017 | Ago. 2018</strong></h4><br><br>
