--- a/pages/prodigious.html
+++ b/pages/prodigious.html
@@ -8,59 +8,76 @@
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
-    <!-- Favicon -->
-    <link href="../img/favicon.ico" rel="icon">
-
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- Libraries Stylesheet -->
     <link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="../lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <!-- Agregar CSS de Bootstrap en el head -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Customized Bootstrap Stylesheet -->
+    <!-- Agregar jQuery y Bootstrap JS antes de cerrar el body -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="plugins/cubeportfolio/css/cubeportfolio.min.css">
     <link href="../css/style.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
     <!-- Navbar Start -->
-    <div class="fixed-ribbon d-flex align-items-center justify-content-between">
-        <!-- Texto principal -->
+    <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
         <a href="../index.html" class="navbar-brand ml-lg-3">
-            <img class="img-fluid" src="../img/logo.png" alt="">
+            <h1 class="m-0 display-5"><span class="text-primary">CSG</span>Folio</h1>
         </a>
-        <!-- Botones -->
-        <div>
-            <a href="../index.html#service" class="btn btn-outline-primary">Inicio</a>
-            <a href="../index.html#contact" class="btn btn-primary">Contactame</a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse px-lg-3" id="navbarCollapse">
+            <div class="navbar-nav m-auto py-0">
+                <a href="#home" class="nav-item nav-link active"></a>
+            </div>
+            <a href="../index.html" class="btn btn-outline-primary d-none d-lg-block">Inicio</a>
+        </div>
+    </nav>
+    <!-- Navbar End -->
+
+    <!-- Header Start -->
+    <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 70vh;">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0" style="text-align: center;">
+                    <img class="img-fluid rounded-circle shadow-sm" src="../img/logos/prodigious.png" alt="">
+                </div>
+                <div class="col-lg-7 text-center text-lg-left">
+                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
+                        Experiencia: </h1>
+                    <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
+                    <div class="typed-text d-none">Pruebas funcionales, Pruebas no funcionales, Gestión de defectos, Jira, Testrail, AEM, CrossBrowsing </div>
+                </div>
+            </div>
         </div>
     </div>
-    <!-- Navbar End -->
-    <br>
-    <br>
+    <!-- Header End -->
+    <!-- Qualification Start -->
     <!-- Qualification Start -->
     <div class="container-fluid py-5" id="qualification">
         <div class="container">
-            <div class="position-relative d-flex align-items-center justify-content-center"><br><br><br>
-                <img class="img-fluid" src="../img/logos/prodigious.png" alt=""><br><br>
-            </div> <br>
-            <h4 class="mb-2 text-center"><strong>Ago.2017 | Ago. 2018</strong></h4><br><br>
-            <h1 class="font-weight-bold mb-1">SENIOR FUNCTIONAL QA ANALYST</h1>
-            <h5 class="mb-2"><strong></strong></h5><br><br>
-            <h3 class="position-absolute text-uppercase text-primary">Funciones destacadas:</h3><br><br><br>
-
+            <h3 class="mb-2">SENIOR FUNCTIONAL QA ANALYST</h3>
+            <p class="mb-2"><strong>Ago.2017 | Ago. 2018</strong></p><br>
+            <h3>Funciones destacadas:</h3><br>
             <div class="row align-items-center">
                 <div class="col-lg-6"></div>
                 <div class="border-left border-primary pt-2 pl-4 ml-2">
                     <div class="position-relative mb-4">
-                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <i class="far fa-dot-circle text-primary position-absolute"
+                            style="top: 2px; left: -32px;"></i>
                         <p class="mb-2"><strong>Creación y ejecución de pruebas funcionales y no funcionales con
                                 herramientas como Apigee y Postman.</strong></p>
                     </div>
@@ -93,61 +110,29 @@
     </div>
     <!-- Qualification End -->
     <!-- Footer Start -->
-    <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
-        <div class="container text-center py-5">
-            <div class="d-flex justify-content-center mb-2">
-                <a class="btn btn-light btn-social mr-2"
-                    href="https://www.facebook.com/katalinasilvestre?mibextid=ZbWKwL" target="_blank"><i
-                        class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/catalinasilvestre/"
-                    target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social mr-2"
-                    href="https://www.instagram.com/kathasgut?igsh=MWhrb2MzaWR2ZHVycg==" target="_blank"><i
-                        class="fab fa-instagram"></i></a>
-                <a class="btn btn-light btn-social mr-2"
-                    href="https://www.tiktok.com/@katalinasilvestre?_t=8sItff0791y&_r=1" target="_blank"><i
-                        class="fab fa-tiktok"></i></a>
-            </div>
-            <div class="d-flex justify-content-center mb-3">
-                <a class="text-white" href="../index.html#about">Acerca </a>
-                <span class="px-3">|</span>
-                <a class="text-white" href="../index.html#qualification">Educación</a>
-                <span class="px-3">|</span>
-                <a class="text-white" href="../index.html#service">Experiencia</a>
-                <span class="px-3">|</span>
-                <a class="text-white" href="../index.html#skill">Habilidades</a>
-            </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">2024</a>. Todos los derechos
-                reservados y
-                diseñado por Catalina Silvestre Gutiérrez</p>
-        </div>
-    </div>
+    <div id="footer-container"></div>
     <!-- Footer End -->
-
     <!-- Scroll to Bottom -->
     <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
-
-
     <!-- JavaScript Libraries -->
+    <script src="../js/components.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/typed/typed.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-
+    <script src="../lib/typed/typed.min.js"></script>
+    <script src="../lib/easing/easing.min.js"></script>
+    <script src="../lib/waypoints/waypoints.min.js"></script>
+    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="../lib/lightbox/js/lightbox.min.js"></script>
     <!-- Contact Javascript File -->
     <script src="../mail/jqBootstrapValidation.min.js"></script>
-    <script src="../mail/contact.js"></script>
-
-    <!-- Template Javascript -->
     <script src="../js/main.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="../js/contact.js"></script>
+    <script src="../js/modal.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
