--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span>Catalina Silvestre</span>
             </a>
             <nav class="nav-links" aria-label="Secciones">
-                <a href="#habilidades">Habilidades</a>
+                <a href="#inicio">Inicio</a>
                 <a href="#habilidades">Habilidades</a>
                 <a href="#experiencia">Experiencia</a>
                 <a href="#proyectos">Proyectos</a>
@@ -53,6 +53,7 @@
         <!-- HERO -->
         <section class="hero" aria-label="Presentación" id="inicio">
             <div>
+                <br><br>
                 <span class="badge" aria-label="Rol actual">QA • Automatización • API Testing • Analista Funcional</span>
                 <h1 class="title">Hola, soy <span class="grad">Catalina</span> — QA con <strong>10+ años</strong>
                     mejorando la calidad de software</h1>
@@ -360,9 +361,12 @@
             © <span id="y"></span> Catalina Silvestre – Portafolio QA • Construido con HTML & CSS puros
         </div>
     </footer>
-    <script>document.getElementById('y').textContent = new Date().getFullYear()</script>
-    <a href="#inicio" class="scroll-to-top" aria-label="Ir a habilidades">⬆️</a>
-
+    <a href="#inicio" class="scroll-to-top" aria-label="Ir a Inicio">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M12 2L5 9h4v9h6V9h4z"/>
+        </svg>
+      </a>
+      
 </body>
 <script>
     const scrollBtn = document.querySelector('.scroll-to-top');
